--- a/Сайт.html
+++ b/Сайт.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UFT-8">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheet.css" rel="stylesheet">
     <title>Онлайн-курс "Успешный успех"</title>
 </head>
